--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -134,6 +134,7 @@ transform()
     a
       display block*/
   .tabs-days
+    margin-top 110px
     text-align center
     .nav span
       display block
@@ -141,6 +142,7 @@ transform()
       padding 0
       padding-bottom 10px
       background #fff
+      position static
     .basket-head
       padding 15px 0 15px 15px
       text-align left
@@ -361,6 +363,8 @@ th.next
             text-decoration none
         .product-link
           margin-left 0
+          span span
+            display none
         span
           display block
           margin-left 30px
@@ -522,6 +526,7 @@ th.next
     .product-text
       height 90px
       overflow auto
+      text-align left
     .product-options
       font-size 12px
       line-height 18px
@@ -792,7 +797,7 @@ th.next
     padding 15px 0 15px 10px
     font-weight bold
   .catalog-confirm
-    li
+    >li
       list-style-type none
       border-bottom 1px solid #ccc
       overflow auto
@@ -860,9 +865,16 @@ th.next
       .delivery-dropdown
         float right
         margin-top -5px
+        display none
         .dropdown-menu
           left -233px
           width 360px
+      .address-input
+        width 360px
+        margin 10px 0
+        display none
+        .btn
+          margin-bottom 10px
     .alert-delivery
       color #ff0000
       display none
