--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -181,18 +181,15 @@ transform()
         display inline-block
         vertical-align middle
         line-height 16px
-        max-width 129px
+        max-width 119px
         span
           display none
-      .ace-spinner
-        display inline-block
-        vertical-align middle
       .product-right-descr
         display inline-block
         vertical-align middle
-        margin-left 10px
+        //margin-left 10px
         margin-bottom 5px
-        padding-right 20px
+        //padding-right 10px
         font-size 12px
         line-height 16px
       .delete-product
@@ -373,8 +370,6 @@ th.next
             margin 0
         .unit-name
         .ace-spinner
-          display inline-block
-          vertical-align middle
           margin 0
 .shop-orders
   display none
@@ -404,6 +399,14 @@ th.next
     margin 20px 0 0 0
     a
       font-size 16px
+
+.ace-spinner
+  display inline-block
+  vertical-align middle
+  i
+    font-size 14px
+    position relative
+    top: -2px
 
 .orders-tbl
   width 100%
@@ -461,7 +464,7 @@ th.next
     background #fff
 
 .ace-spinner
-  width 50px !important
+  width 90px !important
   .input-mini
     width 40px
     padding 5px 2px
@@ -844,8 +847,11 @@ th.next
       font-weight bold
   .delivery-right
     padding-left 10px
+    margin-top 40px
     h3
       font-size 16px
+    #phone-delivery
+      width 250px
     .input-delivery
       padding-right 10px
       .lbl
