новая страница профиля

--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -21,7 +21,7 @@
       font-size 34px
       margin 10px 5px 0 5px
   .text-area
-    margin 0 200px 0 215px
+    margin 0 0 0 10px
     .user-head
       h1
         display inline-block
@@ -45,6 +45,17 @@
       span
         width 170px
         display inline-block
+      .user-addresses
+        span
+          display inline-block
+          margin-right 15px
+          width auto
+        a
+          font-size 12px
+        .add-user-address
+          margin 10px 0
+      .form-edit
+        display none
 
 .short.form-control
   width 75px !important
