--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -27,7 +27,7 @@
   margin: 10px 5px 0 5px;
 }
 .user-descr .text-area {
-  margin: 0 200px 0 215px;
+  margin: 0 0 0 10px;
 }
 .user-descr .text-area .user-head h1 {
   display: inline-block;
@@ -58,6 +58,20 @@
 .user-descr .text-area .user-body span {
   width: 170px;
   display: inline-block;
+}
+.user-descr .text-area .user-body .user-addresses span {
+  display: inline-block;
+  margin-right: 15px;
+  width: auto;
+}
+.user-descr .text-area .user-body .user-addresses a {
+  font-size: 12px;
+}
+.user-descr .text-area .user-body .user-addresses .add-user-address {
+  margin: 10px 0;
+}
+.user-descr .text-area .user-body .form-edit {
+  display: none;
 }
 .short.form-control {
   width: 75px !important;
