--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -50,6 +50,7 @@
           display inline-block
           margin-right 15px
           width auto
+          padding 3px 0
         a
           font-size 12px
         .add-user-address
