--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -63,6 +63,7 @@
   display: inline-block;
   margin-right: 15px;
   width: auto;
+  padding: 3px 0;
 }
 .user-descr .text-area .user-body .user-addresses a {
   font-size: 12px;
