--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -59,6 +59,9 @@
   width: 170px;
   display: inline-block;
 }
+.user-descr .text-area .user-body .user-addresses {
+  padding-bottom: 30px;
+}
 .user-descr .text-area .user-body .user-addresses span {
   display: inline-block;
   margin-right: 15px;
