--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -46,6 +46,7 @@
         width 170px
         display inline-block
       .user-addresses
+        padding-bottom 30px
         span
           display inline-block
           margin-right 15px
