--- a/vonline_be/war/css/settings.styl
+++ b/vonline_be/war/css/settings.styl
@@ -2,27 +2,23 @@
 .settings
 .edit-personal
   padding 0 10px
-  .tabbable
-    z-index 5
   h3
     margin-top 10px
-  .tab-content
-    margin-bottom 10px
-  .tab-pane
-    label
-      display inline-block
-      width 160px
-    .form-control
-      display inline-block
-      width 233px
-      margin 0 0 10px 0
-    .subs-group
-      display inline-block
-      border-left 1px solid #2b7dbc
-      padding-left 15px
-    .checkbox label
-      width auto
+  label
+    display inline-block
+    width 160px
+  .form-control
+    display inline-block
+    width 233px
+    margin 0 0 10px 0
+  .subs-group
+    display inline-block
+    border-left 1px solid #2b7dbc
+    padding-left 15px
+  .checkbox label
+    width auto
   input[type="text"]
+  input[type="email"]
   textarea
     margin-bottom 10px
     width 233px
