--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -77,6 +77,9 @@
 .user-descr .text-area .user-body .form-edit {
   display: none;
 }
+.user-descr .text-area .user-body .form-edit .ui-helper-hidden-accessible {
+  display: none;
+}
 .short.form-control {
   width: 75px !important;
 }
