--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -385,6 +385,9 @@ span
 .catalog table tr:first-child td {
   border-top: 1px solid #ccc;
 }
+.catalog table tr.added {
+  background-color: #e7ffc5;
+}
 .catalog table tr td {
   vertical-align: middle;
   border-bottom: 1px solid #ccc;
