--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -352,6 +352,8 @@ th.next
       &:first-child
         td
           border-top 1px solid #ccc
+      &.added
+        background-color #e7ffc5
       td
         vertical-align middle
         border-bottom 1px solid #ccc
