--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -388,6 +388,7 @@ th.next
           margin 0
 .shop-orders
   display none
+  margin-right -10px
   h1
     margin-top 10px
   .back-to-shop
@@ -434,20 +435,25 @@ th.next
     border 1px solid #ccc
     padding 5px 0
   .td1
-    width 5%
+    width 3%
   .td2
-    width 18%
+    width 19%
   .td3
     width 10%
   .td4
-    width 14%
+    width 12%
   .td5
     width 21%
   .td6
     width 7%
   .td7
-    width 186px
+    width 16%//186
     border 0
+  .td8
+    width 6%
+  .td9
+    width 9%
+
 
 .orders-tbl-wrap
   //margin-right 240px
@@ -462,21 +468,25 @@ th.next
       border 1px solid #ccc
       padding 5px 0
   .td1
-    width 5%
+    width 3%
   .td2
-    width 18%
+    width 19%
   .td3
     width 10%
   .td4
-    width 14%
+    width 12%
   .td5
     width 21%
   .td6
     width 7%
   .td7
-    width 186px
+    width 16%
     border 1px solid #fff
     background #fff
+  .td8
+    width 6%
+  .td9
+    width 9%
 
 .ace-spinner
   width 90px !important
