--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -928,6 +928,20 @@ th.next
     font-size 14px
     color rgb(133, 133, 133)
 
+/* order End */
+.order-end
+  padding 0 20px
+  text-align center
+  h3
+    text-align left
+  .order-end-info
+    margin-top 20px
+    margin-bottom 15px
+    .td1
+    .td7
+      display none
+
+
 /* backoffice */
 .backoffice .main-content
   margin-left 200px
