--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -141,7 +141,7 @@ transform()
     a
       display block*/
   .tabs-days
-    margin-top 110px
+    margin-top 82px
     text-align center
     .nav span
       display block
@@ -217,6 +217,8 @@ transform()
           background 0
       .unit-name
         display none
+    .fa-shopping-cart
+      display none !important
   .btn-grey
     margin-left 186px
     margin-right 10px
@@ -582,7 +584,7 @@ th.next
       .ace-spinner
       .fa
         display inline-block
-        vertical-align middle
+        //vertical-align middle
         margin 0 17px
       span
         font-size 20px
@@ -593,6 +595,7 @@ th.next
         display inline-block
         vertical-align middle
         line-height 16px
+        font-size 12px
         span
           font-size 12px
           margin-left 0
@@ -607,9 +610,9 @@ th.next
         span
         .ace-spinner
         .fa
-          margin 0 10px
+          margin 0 8px
         .fa-shopping-cart
-          margin-top 8px
+          margin-top 5px
         .prepack-item
           span
             display block
@@ -622,9 +625,10 @@ th.next
       max-height 320px;
       overflow auto
       line-height 22px
+      font-size 12px
     .prepack-list
       float right
-      margin-right 129px
+      margin-right 59px
       .prepack-line
         margin-top 5px
       .close
@@ -635,13 +639,17 @@ th.next
         &:hover
           opacity 1
   .error-prepack
-    position absolute
-    bottom -50px
-    right 5px
-    width 119px
-    height 50px
+    float right
     font-size 10px
     line-height 10px
+    width 190px
+    margin-top 16px
+/*position absolute
+bottom -50px
+right 5px
+width 119px
+height 50px
+*/
 .modal-order-end
   height 360px
   .modal-body-list
@@ -865,6 +873,8 @@ th.next
           display inline-block
           vertical-align middle
           margin-left 40px
+    .fa-shopping-cart
+      display none !important
   .itogo-right
     float right
     padding-top 15px
