--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -154,10 +154,12 @@ transform()
       padding 12px 0 12px 15px
       text-align left
       overflow auto
+      font-size 16px
       .amount
-        font-size 16px
         float right
         margin-right 15px
+      .weight
+        float left
     .basket-bottom
       .btn
         float right
