--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -405,9 +405,15 @@ span
   width: 60%;
   padding-left: 5px;
 }
-.catalog table tr td img {
-  width: 20px;
+.catalog table tr td .product-pic {
+  width: 40px;
+  height: 40px;
+  text-align: center;
   float: left;
+}
+.catalog table tr td .product-pic img {
+  max-width: 40px;
+  max-height: 40px;
 }
 .catalog table tr td .fa {
   font-size: 24px;
@@ -420,13 +426,19 @@ span
 }
 .catalog table tr td .product-link {
   margin-left: 0;
+  line-height: 40px;
+}
+.catalog table tr td .product-link span {
+  display: inline-block;
+  width: 80%;
+  vertical-align: middle;
+  line-height: 14px;
 }
 .catalog table tr td .product-link span span {
   display: none;
 }
 .catalog table tr td span {
-  display: block;
-  margin-left: 30px;
+  margin-left: 10px;
   margin-right: 10px;
 }
 .catalog table tr td span span {
