--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -367,9 +367,14 @@ th.next
           text-align left
           width 60%
           padding-left 5px
-        img
-          width 20px
+        .product-pic
+          width 40px
+          height 40px
+          text-align center
           float left
+          img
+            max-width 40px
+            max-height 40px
         .fa
           font-size 24px
           color #428bca
@@ -379,11 +384,16 @@ th.next
             text-decoration none
         .product-link
           margin-left 0
-          span span
-            display none
+          line-height 40px
+          span
+            display inline-block
+            width 80%
+            vertical-align middle
+            line-height 14px
+            span
+              display none
         span
-          display block
-          margin-left 30px
+          margin-left 10px
           margin-right 10px
           span
             margin 0
