--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -468,7 +468,7 @@ span
   text-decoration: none;
 }
 .shop-orders .order-item .order-products {
-  margin: 10px 0 0 0;
+  margin: 10px 10px 0 0;
   display: none;
 }
 .shop-orders .order-item .order-edit,
