--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -415,7 +415,7 @@ th.next
       font-size 24px
       text-decoration none
     .order-products
-      margin 10px 0 0 0
+      margin 10px 10px 0 0
       display none
     .order-edit
     .order-confirm
