--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1158,6 +1158,26 @@ height 50px
 .order-end .order-end-info .td7 {
   display: none;
 }
+/* error */
+.modal-error {
+  height: 130px;
+  font-size: 14px;
+  padding-top: 10px;
+  border: 3px solid #f00;
+}
+.modal-error .close {
+  margin-top: -15px;
+}
+.modal-error .error-info {
+  clear: right;
+  text-align: right;
+  float: right;
+  font-size: 12px;
+  height: 54px;
+}
+.modal-error .error-details-link {
+  float: right;
+}
 /* backoffice */
 .backoffice .main-content {
   margin-left: 200px;
