--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -962,7 +962,22 @@ height 50px
     .td1
     .td7
       display none
-
+/* error */
+.modal-error
+  height 130px
+  font-size 14px
+  padding-top 10px
+  border 3px solid #ff0000
+  .close
+    margin-top -15px
+  .error-info
+    clear right
+    text-align right
+    float right
+    font-size 12px
+    height 54px
+  .error-details-link
+    float right
 
 /* backoffice */
 .backoffice .main-content
