--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -548,19 +548,20 @@ th.next
         float none
         display inline-block
     .slider
-      li
+      >li
         height 192px
         line-height 192px
       img
         max-width 192px
-        max-height  192px
-        vertical-align middle
+        max-height  172px
+        vertical-align top
     .carousel
       img
         max-width 60px
         max-height 60px
       li
         cursor pointer
+        line-height 60px !important
   .product-descr
      margin-left 210px
     h3
