--- a/vonline_be/war/css/settings.css
+++ b/vonline_be/war/css/settings.css
@@ -4,7 +4,8 @@
 }
 .settings h3,
 .edit-personal h3 {
-  margin-top: 10px;
+  margin-top: 0;
+  padding-top: 10px;
 }
 .settings label,
 .edit-personal label {
