--- a/vonline_be/war/css/settings.styl
+++ b/vonline_be/war/css/settings.styl
@@ -3,7 +3,8 @@
 .edit-personal
   padding 0 10px
   h3
-    margin-top 10px
+    margin-top 0
+    padding-top 10px
   label
     display inline-block
     width 160px
