--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -957,6 +957,8 @@ height 50px
   text-align center
   h3
     text-align left
+    margin-top 0
+    padding-top 15px
   .order-end-info
     margin-top 20px
     margin-bottom 15px
