--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -889,7 +889,9 @@ height 50px
     .fa-shopping-cart
       display none !important
   .itogo-right
+  .weight-right
     float right
+    clear right
     padding-top 15px
     font-size 16px
     span
