--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -957,16 +957,76 @@ height 50px
 .order-end
   padding 0 20px
   text-align center
-  h3
-    text-align left
-    margin-top 0
-    padding-top 15px
-  .order-end-info
-    margin-top 20px
-    margin-bottom 15px
-    .td1
-    .td7
-      display none
+  .to-main-link
+    float left
+    margin 10px 0
+  .order-end-in
+    min-width 768px
+    width 80%
+    margin 0 auto
+    h3
+      text-align left
+      margin-top 0
+      padding-top 15px
+      margin-bottom 20px
+      clear left
+    .bill-wrap
+      border 1px solid #438eb9
+      text-align left
+      padding 20px
+      .bill-title
+        padding 5px 10px
+        margin -35px 0 0 0
+        background #fff
+        position absolute
+      .order-end-head
+        .bill-item
+          font-size 14px
+          line-height 26px
+          span
+            line-height 16px
+        .bill-amount
+          font-weight bold
+          font-size 18px
+          margin-bottom 10px
+        .order-end-head-left
+          float left
+          margin-bottom 30px
+          width 45%
+        .order-end-head-right
+          float right
+          width 45%
+          .order-end-logo
+            float left
+            width 100px
+            img
+              width 100%
+          .order-end-shop-info
+            margin-left 120px
+      .order-end-info
+        margin-top 20px
+        .product-link
+          color #000000
+          cursor default
+        h2
+          clear both
+          font-size 20px
+        .bill-delivery
+          font-size 16px
+          padding 10px 0
+          border-top 1px solid #ccc
+          border-bottom 1px solid #ccc
+        .order-end-amount
+          text-align right
+          font-weight bold
+          font-size 14px
+          margin-top 10px
+          &.all-amount
+            font-size 16px
+            clear right
+            padding 15px 10px 0 0
+            margin-top 15px
+            border-top 1px solid #438eb9
 /* error */
 .modal-error
   height 130px
