--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -178,6 +178,7 @@ transform()
       font-size 12px
       border-bottom 1px solid #ccc
       line-height 32px;
+      text-align left
       table
         width 180px
         float right
@@ -202,9 +203,7 @@ transform()
       .product-right-descr
         display inline-block
         vertical-align middle
-        //margin-left 10px
         margin-bottom 5px
-        //padding-right 10px
         font-size 12px
         line-height 16px
       .delete-product
