--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -926,6 +926,8 @@ height 50px
         .dropdown-menu
           left -233px
           width 360px
+          li a
+            white-space normal
       .address-input
         //width 360px
         margin 10px 0
@@ -1011,11 +1013,17 @@ height 50px
         h2
           clear both
           font-size 20px
-        .bill-delivery
-          font-size 16px
-          padding 10px 0
-          border-top 1px solid #ccc
-          border-bottom 1px solid #ccc
+        .bill-comment
+          clear right
+          float right
+          margin 10px 0 20px 0
+          width 60%
+          h4
+            float left
+            font-size 16px
+            margin 0
+          div
+            margin-left 130px
         .order-end-amount
           text-align right
           font-weight bold
