--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -218,8 +218,6 @@ transform()
           background 0
       .unit-name
         display none
-    .fa-shopping-cart
-      display none !important
   .btn-grey
     margin-left 186px
     margin-right 10px
@@ -885,8 +883,6 @@ height 50px
           display inline-block
           vertical-align middle
           margin-left 40px
-    .fa-shopping-cart
-      display none !important
   .itogo-right
   .weight-right
     float right
@@ -1023,6 +1019,11 @@ height 50px
             margin 0
           div
             margin-left 130px
+        .bill-delivery
+          float right
+          font-weight bold
+          margin 10px 0 15px 0
+          font-size 14px
         .order-end-amount
           text-align right
           font-weight bold
