--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -230,9 +230,6 @@ a {
 .shop-right .catalog-order li .unit-name {
   display: none;
 }
-.shop-right .catalog-order .fa-shopping-cart {
-  display: none !important;
-}
 .shop-right .btn-grey {
   margin-left: 186px;
   margin-right: 10px;
@@ -1062,9 +1059,6 @@ height 50px
   vertical-align: middle;
   margin-left: 40px;
 }
-.confirm-order .catalog-confirm .fa-shopping-cart {
-  display: none !important;
-}
 .confirm-order .itogo-right,
 .confirm-order .weight-right {
   float: right;
@@ -1237,6 +1231,12 @@ height 50px
 }
 .order-end .order-end-in .bill-wrap .order-end-info .bill-comment div {
   margin-left: 130px;
+}
+.order-end .order-end-in .bill-wrap .order-end-info .bill-delivery {
+  float: right;
+  font-weight: bold;
+  margin: 10px 0 15px 0;
+  font-size: 14px;
 }
 .order-end .order-end-in .bill-wrap .order-end-info .order-end-amount {
   text-align: right;
