--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -56,6 +56,16 @@
           font-size 12px
         .add-user-address
           margin 10px 0
+        .edit-user-addr
+          vertical-align middle
+          display inline-block
+        .remove-user-addr
+          color #ff0000
+          vertical-align middle
+          margin-left 5px
+          text-decoration none
+          display inline-block
+          font-size 18px
       .form-edit
         display none
         .ui-helper-hidden-accessible
