убрать спиннер у добавленного

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -355,6 +355,21 @@ th.next
           border-top 1px solid #ccc
       &.added
         background-color #e7ffc5
+        .added-text
+          display block
+          font-weight bold
+        .ace-spinner
+        .fa-shopping-cart
+        .prepack-item
+        .prepack-list
+          display none
+        .fa-check
+          display block
+          font-size 24px
+          cursor default
+          margin 0
+        /*.modal-with-prepack
+          height 268px !important*/
       td
         vertical-align middle
         border-bottom 1px solid #ccc
@@ -397,6 +412,9 @@ th.next
         .unit-name
         .ace-spinner
           margin 0
+        .added-text
+        .fa-check
+          display none
 .shop-orders
   display none
   margin-right -10px
