--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -391,6 +391,24 @@ span
 }
 .catalog table tr.added {
   background-color: #e7ffc5;
+/*.modal-with-prepack
+          height 268px !important*/
+}
+.catalog table tr.added .added-text {
+  display: block;
+  font-weight: bold;
+}
+.catalog table tr.added .ace-spinner,
+.catalog table tr.added .fa-shopping-cart,
+.catalog table tr.added .prepack-item,
+.catalog table tr.added .prepack-list {
+  display: none;
+}
+.catalog table tr.added .fa-check {
+  display: block;
+  font-size: 24px;
+  cursor: default;
+  margin: 0;
 }
 .catalog table tr td {
   vertical-align: middle;
@@ -445,6 +463,10 @@ span
 .catalog table tr td .unit-name,
 .catalog table tr td .ace-spinner {
   margin: 0;
+}
+.catalog table tr td .added-text,
+.catalog table tr td .fa-check {
+  display: none;
 }
 .shop-orders {
   display: none;
