--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -519,8 +519,8 @@ th.next
 
 .ace-spinner
   width 90px !important
-  .input-mini
-    width 40px
+  .input-mini.spinner-input.spinner1.form-control
+    width 40px !important
     padding 5px 2px
   .spinner-down:hover
   .spinner-up:hover
@@ -1104,7 +1104,8 @@ height 50px
     display inline-block
     margin-left 20px
     input[type="submit"]
-      margin-top 10px
+      //margin-top 10px
+      margin-left 10px
   .products-checklist
   .categories-checklist
   .producers-checklist
@@ -1116,11 +1117,12 @@ height 50px
     .import-field-dropdown
       display block
       width 100%
+      background #6fb3e0
       .btn
-        width 100%
         padding 5px
         border 0
         font-size 12px
+        float none
     .import-table
       overflow-x auto
       overflow-y visible
@@ -1142,7 +1144,7 @@ height 50px
 .export
   .input-group
     display inline-block
-    margin-bottom 10px
+    vertical-align middle
   .report-link
     line-height 34px
     display inline-block
