--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -659,13 +659,16 @@ th.next
       margin-right 59px
       .prepack-line
         margin-top 5px
-      .close
+      .remove-prepack-line
         color #a44451
         opacity .5
         position relative
         top: -10px
+        font-size 21px
+        font-weight bold
         &:hover
           opacity 1
+          text-decoration none
   .error-prepack
     float right
     font-size 10px
